Implement grouped paths in terms of path groups